--- a/RayTraining/RayTraining/RayTraining.vcxproj
+++ b/RayTraining/RayTraining/RayTraining.vcxproj
@@ -51,7 +51,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CLRSupport>true</CLRSupport>
+    <CLRSupport>false</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -126,12 +126,14 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="debugOutput.txt" />
     <Text Include="input.txt" />
     <Text Include="output.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundinBox.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Header.h" />
     <ClInclude Include="IGeom.h" />
     <ClInclude Include="ImageCreator.h" />
     <ClInclude Include="IObject.h" />
