--- a/RayTraining/RayTraining/RayTraining.vcxproj.filters
+++ b/RayTraining/RayTraining/RayTraining.vcxproj.filters
@@ -100,6 +100,9 @@
     <ClInclude Include="Texture.h">
       <Filter>Заголовочные файлы\Instruments</Filter>
     </ClInclude>
+    <ClInclude Include="AntiAliacing.h">
+      <Filter>Заголовочные файлы\Utilites</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="image.png">
